--- a/inyoka/static/style/markup.css
+++ b/inyoka/static/style/markup.css
@@ -212,6 +212,8 @@ div.workinprogress h3 {
   background-position: top right;
   background-repeat:no-repeat;
   font-size: 0.9em;
+  /* IE fix */
+  width: 50ex;
 }
 
 .toc .head {
